--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     <header>
        <div class="container">
-         <!-- Início Foto Galdino --> 
-        <div class="Galdino">
+         <!-- Início Foto Claudio --> 
+        <div class="Claudiodev">
             <figure>
-                <img src="assets/Galdino.jpeg" alt="Foto do Galdino">
+                <img src="assets/Claudiodev.jpg" alt="Foto do Claudio">
             </figure>
         </div>
-        <!-- Fim Foto Galdino --> 
+        <!-- Fim Foto Claudio --> 
         <div>
             <h1>@Claudiocariridev</h1>
         </div>
@@ -36,10 +36,10 @@
     <main>
         <div class="container">
             <div class="links">
-            <a href="https://www.instagram.com/claudiocariridev/"class="instagram"><i class="ph-bold ph-instagram-logo"></i> Instagram</a>
-            <a href="https://wa.link/5awedd"class="whatsapp"><i class="ph-bold ph-whatsapp-logo"></i> WhatsApp</a>
-            <a href="https://github.com/Claudiocariridev"class="githhub"><i class="ph-bold ph-github-logo"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/claudio-ramalho-galdino/"class="linkedin"><i class="ph-bold ph-linkedin-logo"></i> LinkedIn</a>
+            <a href="https://www.instagram.com/claudiocariridev/" target="_blank" class="instagram"><i class="ph-bold ph-instagram-logo"></i> Instagram</a>
+            <a href="https://wa.link/5awedd" target="_blank" class="whatsapp"><i class="ph-bold ph-whatsapp-logo"></i> WhatsApp</a>
+            <a href="https://github.com/Claudiocariridev" target="_blank" class="githhub"><i class="ph-bold ph-github-logo"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/claudio-ramalho-galdino/" target="_blank" class="linkedin"><i class="ph-bold ph-linkedin-logo"></i> LinkedIn</a>
         </div>
         </div> 
     </main>
