Corrigindo erros de merge

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
        <div class="container">
          <!-- Início Foto Claudio --> 
-        <div class="Claudiodev">
+        <div class="Claudio">
             <figure>
-                <img src="assets/Claudiodev.jpg" alt="Foto do Claudio">
+                <img src="assets/Galdino.jpeg" alt="Foto do Claudio">
             </figure>
         </div>
         <!-- Fim Foto Claudio --> 
